--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,6 @@
 body {
-    background: red;
-    color: white;
+    background: #262729;
+    color: rgb(204, 208, 231);
+    font-family: sans-serif;
+    text-align: center;
 }
