Starting out. Man this is tough

--- a/project-two/css/main.scss
+++ b/project-two/css/main.scss
@@ -1,5 +1,5 @@
 body {
-    background: #d0d5dd;
+    background: #6a83ac;
     color: rgb(204, 208, 231);
     font-family: sans-serif;
     text-align: center;
